--- a/manifest.json
+++ b/manifest.json
@@ -3,79 +3,79 @@
   "name": "All India Trade Test",
   "icons": [
     {
-      "src": "16x16.png",
+      "src": "icon/16x16.png",
       "type": "image/png",
       "sizes": "16x16"
     },
    
         {
-      "src": "32x32.png",
+      "src": "icon/32x32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
    
         {
-      "src": "48x48.png",
+      "src": "icon/48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
    
         {
-      "src": "64x64.png",
+      "src": "icon/64x64.png",
       "type": "image/png",
       "sizes": "64x64"
     },
    
         {
-      "src": "72x72.png",
+      "src": "icon/72x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
    
         {
-      "src": "90x90.png",
+      "src": "icon/90x90.png",
       "type": "image/png",
       "sizes": "90x90"
     },
    
         {
-      "src": "96x96.png",
+      "src": "icon/96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
    
         {
-      "src": "128x128.png",
+      "src": "icon/128x128.png",
       "type": "image/png",
       "sizes": "128x128"
     },
    
         {
-      "src": "144x144.png",
+      "src": "icon/144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
    
         {
-      "src": "180x180.png",
+      "src": "icon/180x180.png",
       "type": "image/png",
       "sizes": "180x180"
     },
    
         {
-      "src": "192x192.png",
+      "src": "icon/192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
    
         {
-      "src": "256x256.png",
+      "src": "icon/256x256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
    
         {
-      "src": "512x512.png",
+      "src": "icon/512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }],
